--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,36 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
 
+    <!--<build>
+        <plugins>
+            &lt;!&ndash; configured plugins for picocli annotations &ndash;&gt;
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                &lt;!&ndash; annotationProcessorPaths requires maven-compiler-plugin version 3.5 or higher &ndash;&gt;
+                <version>3.10.1</version>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>info.picocli</groupId>
+                            <artifactId>picocli-codegen</artifactId>
+                            <version>4.6.3</version>
+                        </path>
+                    </annotationProcessorPaths>
+                    <compilerArgs>
+                        <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>-->
+
     <repositories>
         <repository>
             <id>jitpack.io</id>
